--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,9 +1,11 @@
+@import url('https://fonts.googleapis.com/css2?family=Nunito:wght@400;500;600;700;800&display=swap');
+
 html,
 body {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-family: 'Nunito', sans-serif;
+  text-align: center;
 }
 
 a {
@@ -13,4 +15,53 @@ a {
 
 * {
   box-sizing: border-box;
+}
+
+h1 {
+    font-weight: 800;
+    font-size: 32px;
+    line-height: 44px;
+    text-align: center;
+    margin-top: 0;
+}
+
+h4 {
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 25px;
+    text-align: center;
+    margin-top: 0;
+}
+
+button {
+    font-family: 'Nunito', sans-serif;
+    font-style: normal;
+    font-weight: 700;
+    font-size: 20px;
+    line-height: 27px;
+    border: none;
+    border-radius: 8px;
+    width: 190px;
+    height: 50px;
+}
+
+.hamburger {
+    position: absolute;
+    width: 30px;
+    height: 26px;
+    left: 30px;
+    top: 60px;
+}
+
+.logomark {
+    width: 50%;
+    height: 50%;
+    margin: 2em;
+}
+
+.background-shape {
+    width: 100%;
+    position: absolute;
+    bottom: 0;
+    z-index: -1;
 }
