--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,9 +1,12 @@
+@import url('https://fonts.googleapis.com/css2?family=Nunito:wght@400;500;600;700;800&display=swap');
+@import url('https://css.gg/chevron-left.css');
+
 html,
 body {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-family: 'Nunito', sans-serif;
+  text-align: center;
 }
 
 a {
@@ -13,4 +16,65 @@ a {
 
 * {
   box-sizing: border-box;
+}
+
+h1 {
+    font-weight: 800;
+    font-size: 32px;
+    line-height: 44px;
+    width: 90%;
+}
+
+h4 {
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 25px;
+    margin-top: 0;
+    width: 90%;
+}
+
+button {
+    font-family: 'Nunito', sans-serif;
+    border: none;
+    font-style: normal;
+    cursor: pointer;
+}
+
+.logomark {
+    width: 12em;
+    height: 12em;
+    margin-top: 2em;
+}
+
+.background-shape {
+    position: absolute;
+    bottom: 0;
+    height: 30%;
+    width: 100%;
+    border-radius: 50% 50% 0 0;
+    background-color: #6B97ED;
+    z-index: -1;
+}
+
+.section-selection {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+@media only screen and (max-width: 600px) and (max-height: 750px){
+    .logomark {
+        width: 10em;
+        height: 10em;
+        margin-top: 0.5em;
+    }
+
+    h1 {
+        font-size: 24px;
+    }
+
+    h4 {
+        font-size: 16px;
+    }
+
 }
