--- a/styles/globals.css
+++ b/styles/globals.css
@@ -22,6 +22,7 @@ h1 {
     font-size: 32px;
     line-height: 44px;
     width: 90%;
+    margin:auto;
 }
 
 h4 {
@@ -59,6 +60,18 @@ button {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
+}
+
+/* challenges */
+.challenges {
+    display:flex;
+    flex-wrap:wrap;
+    justify-content: center;
+    padding:3em;
+}
+.challenge-heading {
+    display:flex;
+    justify-content:space-between;
 }
 
 @media only screen and (max-width: 600px) and (max-height: 750px){
