--- a/styles/globals.css
+++ b/styles/globals.css
@@ -24,6 +24,20 @@ h1 {
     width: 90%;
 }
 
+h2 {
+    font-weight: 600;
+    font-size: 22px;
+    line-height: 44px;
+    width: 90%;
+}
+
+h3 {
+    font-weight: 600;
+    font-size: 20px;
+    line-height: 44px;
+    width: 90%;
+}
+
 h4 {
     font-weight: 400;
     font-size: 18px;
