--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,19 +2,19 @@
 
 html,
 body {
-  padding: 0;
-  margin: 0;
-  font-family: 'Nunito', sans-serif;
-  text-align: center;
+    padding: 0;
+    margin: 0;
+    font-family: 'Nunito', sans-serif;
+    text-align: center;
 }
 
 a {
-  color: inherit;
-  text-decoration: none;
+    color: inherit;
+    text-decoration: none;
 }
 
 * {
-  box-sizing: border-box;
+    box-sizing: border-box;
 }
 
 h1 {
@@ -22,7 +22,6 @@ h1 {
     font-size: 32px;
     line-height: 44px;
     width: 90%;
-    margin:auto;
 }
 
 h4 {
@@ -38,6 +37,25 @@ button {
     border: none;
     font-style: normal;
     cursor: pointer;
+    font-weight: 700;
+    font-size: 20px;
+    line-height: 27px;
+    border-radius: 8px;
+    width: 190px;
+    height: 50px;
+}
+
+.default {
+    background-color: white;
+    position: absolute;
+    bottom: 15.88%;
+}
+
+.primary.large {
+    background: #FF9042;
+    margin: 2.5em;
+    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.05));
+    color: white;
 }
 
 .logomark {
@@ -64,17 +82,18 @@ button {
 
 /* challenges */
 .challenges {
-    display:flex;
-    flex-wrap:wrap;
+    display: flex;
+    flex-wrap: wrap;
     justify-content: center;
-    padding:3em;
-}
-.challenge-heading {
-    display:flex;
-    justify-content:space-between;
+    padding: 3em;
 }
 
-@media only screen and (max-width: 600px) and (max-height: 750px){
+.challenge-heading {
+    display: flex;
+    justify-content: space-between;
+}
+
+@media only screen and (max-width: 600px) and (max-height: 750px) {
     .logomark {
         width: 10em;
         height: 10em;
