--- a/styles/globals.css
+++ b/styles/globals.css
@@ -6,6 +6,12 @@ body {
     margin: 0;
     font-family: 'Nunito', sans-serif;
     text-align: center;
+    display: flex;
+    justify-content: center;
+}
+
+body {
+    width: 90%;
 }
 
 a {
@@ -21,7 +27,20 @@ h1 {
     font-weight: 800;
     font-size: 32px;
     line-height: 44px;
-    width: 90%;
+    margin-bottom: .5em;
+
+}
+h2 {
+    font-weight: 700;
+    font-size: 22px;
+    line-height: 30px;
+}
+
+h3 {
+    font-weight: 600;
+    font-size: 20px;
+    line-height: 27px;
+    margin-top: 0;
 }
 
 h4 {
@@ -58,6 +77,18 @@ button {
     color: white;
 }
 
+.secondary.small {
+    width: 110px;
+    height: 30px;
+    background: #6B97ED;
+    border-radius: 8px;
+    color: white;
+    font-weight: 600;
+    font-size: 16px;
+    line-height: 22px;
+
+}
+
 .logomark {
     width: 12em;
     height: 12em;
@@ -81,17 +112,17 @@ button {
 }
 
 /* challenges */
+
 .challenges {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    padding: 3em;
 }
 
-.challenge-heading {
+/* .challenge-heading {
     display: flex;
     justify-content: space-between;
-}
+}  */
 
 @media only screen and (max-width: 600px) and (max-height: 750px) {
     .logomark {
@@ -102,6 +133,14 @@ button {
 
     h1 {
         font-size: 24px;
+    }
+
+    h2 {
+        font-size: 20px;
+    }
+
+    h3 {
+        font-size: 18px;
     }
 
     h4 {
